--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                           src="./images/singers/greatful.svg"
                           alt="greatful"
                         />
-                        <span class="name">The Greatful Dead</span>
+                        <span class="name">Greatful</span>
                       </div>
                       <div class="singer five">
                         <img src="./images/singers/prince.svg" alt="prince" />
@@ -189,6 +189,16 @@
                       <span class="name">Foo Fighters</span>
                     </div> -->
                     </div>
+                  </div>
+                  <div class="user-profile-container">
+                    <a href="#">
+                      <div class="user-profile">
+                        <img
+                          src="./images/user-profile.svg"
+                          alt="user-profile"
+                        />
+                      </div>
+                    </a>
                   </div>
                   <div class="flip-container">
                     <a href="#">
