--- a/favourite-artists.html
+++ b/favourite-artists.html
@@ -129,7 +129,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="search-listing">
+                    <div class="search-listing last">
                       <div class="artist">
                         <div class="artist-details">
                           <div class="artist-hero">
@@ -147,7 +147,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="search-listing">
+                    <!-- <div class="search-listing">
                       <div class="artist">
                         <div class="artist-details">
                           <div class="artist-hero">
@@ -164,8 +164,8 @@
                           <img src="./images/icons/cross.svg" alt="cross" />
                         </div>
                       </div>
-                    </div>
-                    <div class="search-listing last">
+                    </div> -->
+                    <!-- <div class="search-listing last">
                       <div class="artist">
                         <div class="artist-details">
                           <div class="artist-hero">
@@ -182,7 +182,7 @@
                           <img src="./images/icons/cross.svg" alt="cross" />
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
